--- a/style.css
+++ b/style.css
@@ -1,55 +1,96 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+:root {
+  --white: hsl(0, 0%, 100%);
+  --slate-300: hsl(212, 45%, 89%);
+  --slate-500: hsl(216, 15%, 48%);
+  --slate-900: hsl(218, 44%, 22%);
+}
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+img,
+picture,
+video {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+  color: inherit;
+  background: none;
+  border: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+ul,
+ol {
+  list-style: none;
 }
 
 body {
-    font-family: "Outfit", sans-serif;
-    background-color: hsl(212, 45%, 89%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+  font-family: "Outfit", sans-serif;
+  background-color: var(--slate-300);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 
-.container {
-    display: flex;
-    justify-content: center;
-    background-color: #fff;
-    width: 320px;
-    height: 499px;
-    border-radius: 20px;
-    padding: 16px 16px 40px 16px;
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, .1);
+html {
+  font-size: 15px;
 }
 
-.qr img {
-    width: 288px;
-    height: 288px;
-    border-radius: 10px;
-    margin-bottom: 24px;
+.card {
+  display: flex;
+  justify-content: center;
+  background-color: var(--white);
+  max-width: 21rem;
+  border-radius: 1.3rem;
+  padding: 1rem 1rem 2.6rem 1rem;
+  box-shadow: 0 5px 30px rgba(0, 0, 0, 0.1);
 }
 
-.text {
-    text-align: center;
-    width: 288px;
-    height: 131px;
-    padding: 0 16px;
+.card__img {
+  border-radius: 0.6rem;
+  margin-bottom: 1.6rem;
 }
 
-.text h1 {
-    font-size: 22px;
-    line-height: 120%;
-    font-weight: 700;
-    color: hsl(218, 44%, 22%);
-    margin-bottom: 16px;
+.card-text {
+  text-align: center;
+  padding: 0 1rem;
 }
 
-.text p {
-    font-size: 15px;
-    line-height: 140%;
-    letter-spacing: 0.2px;
-    font-weight: 400;
-    color: hsl(216, 15%, 48%);
+.card-text__title {
+  font-size: 1.4rem;
+  line-height: 120%;
+  font-weight: 700;
+  color: var(--slate-900);
+  margin-bottom: 1rem;
+}
+
+.card-text__p {
+  font-size: 1rem;
+  line-height: 140%;
+  letter-spacing: 0.2px;
+  color: var(--slate-500);
+}
+
+@media (min-width: 320px) {
+  body {
+    margin: 0 0.7rem;
+  }
 }
