--- a/styles.css
+++ b/styles.css
@@ -13,32 +13,10 @@
   box-sizing: border-box;
 }
 
-img,
-picture,
-video {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-input,
-button,
-textarea,
-select {
-  font: inherit;
-  color: inherit;
-  background: none;
-  border: none;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-ul,
-ol {
-  list-style: none;
+body,
+h1,
+p {
+  margin: 0;
 }
 
 body {
@@ -47,13 +25,17 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
   margin: 1rem;
-  overflow-y: hidden;
+  -webkit-font-smoothing: antialiased;
 }
 
 html {
   font-size: 15px;
+}
+
+html, body {
+  height: 100%;
+  overflow-y: hidden;
 }
 
 .card {
@@ -62,7 +44,7 @@ html {
   justify-content: center;
   border-radius: 1.5rem;
   padding: 1rem 1rem 2.6rem 1rem;
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
   align-items: center;
   background-color: var(--white);
   max-width: 22rem;
@@ -71,22 +53,25 @@ html {
 .card__img {
   border-radius: 0.7rem;
   margin-bottom: 1.6rem;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
-.card-text__title {
+
+.card__text {
+  text-align: center;
+  padding: 0 1rem;
+}
+
+.card__title {
   font-size: 1.4rem;
   line-height: 120%;
   font-weight: 700;
   color: var(--slate-900);
   margin-bottom: 1rem;
 }
-
-.card-text {
-  text-align: center;
-  padding: 0 1rem;
-}
-
-.card-text__p {
+.card__description {
   font-size: 1rem;
   line-height: 140%;
   letter-spacing: 0.2px;
